update - fix some spacing issues

--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -8,8 +8,8 @@
 .profile_page_class {
   position: absolute;
   width: 102%;
-  height: calc(120vh - 300px);
-  max-height: 900px;
+  height: 600px;
+  max-height: 700px;
   object-fit: cover;
   object-position: top; /* Ensures the top of the image is visible */
   border: 2px solid #000;
@@ -18,7 +18,7 @@
 }
 
 .profile_page_box {
-    height: 80vh;
+    height: 700px;
     width: 100%;
     background-image: 
         url('../Assets/png/MarketingPage/image.png'), 
@@ -55,7 +55,7 @@
   .profile_page_class {
     position: absolute;
     width: 100%;
-    height: calc(100vh - 400px);
+    height: 250px;
     object-fit: cover;
     object-position: top; /* Ensures the top of the image is visible */
     border: 2px solid #000;
@@ -63,7 +63,7 @@
     box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2); /* Corrected syntax for box-shadow */
   }
   .profile_page_box {
-    height: 60vh;
+    height: 250px;
     width: 100%;
     background-image: 
         url('../Assets/png/MarketingPage/image.png'), 
@@ -79,17 +79,17 @@
         3% 90%,  
         100% 5%,  
         98% 35%,  
-        104% 65%,   
+        97% 65%,   
         100% 90%;  
     background-repeat: no-repeat;
     background-size: 
-        50px 50px,
-        60px 80px,
-        60px 40px,
-        50px 50px,
-        50px 50px,
-        70px 70px,
-        50px 50px;
+        25px 25px,
+        30px 40px,
+        30px 20px,
+        25px 25px,
+        30px 30px,
+        40px 40px,
+        30px 30px;
     color: #000;
 }
 }
